# opengl-engine-template

./: .gitignore  CMakeLists.txt  README.md
EngineProject/: CMakeLists.txt  EngineProject.cpp  EngineProject.h
GLAD/include/glad/: gl.h
GLAD/src/: gl.c
engine/: CMakeLists.txt
engine/source/: Application.cpp  Application.h  engine.cpp  engine.h
source/: main.cpp
